--- a/src/index.html
+++ b/src/index.html
@@ -7,14 +7,17 @@
     <link rel="stylesheet" href="./styles.css" />
   </head>
   <body>
+   <div class="form-container">
     <form class="search-form" id="search-form">
-      <input class="input" type="text" name="searchQuery" autocomplete="off" placeholder="Search images..." />
-      <button class="formBtn" type="submit"><img width="15px" height="15px" src="./magnifier_icon-icons.com_48267.png" alt=""></button>
-    </form>
+    <input class="input" type="text" name="searchQuery" autocomplete="off" placeholder="Search images..." />
+    <button class="formBtn" type="submit"><img width="15px" height="15px" src="./magnifier_icon-icons.com_48267.png"
+        ></button>
+  </form></div>
     <div class="gallery">
       <!-- Карточки изображений -->
     </div>
-    <!-- <button type="button" class="load-more">Load more</button> -->
+    
+    <button type="button" class="load-more">Load more</button>
     <script type="module" src="./index.js"></script>
   </body>
 </html>
