--- a/src/index.html
+++ b/src/index.html
@@ -17,7 +17,7 @@
       <!-- Карточки изображений -->
     </div>
     
-    <button type="button" class="load-more">Load more</button>
+    <button type="button" class="load-more loadMoreHidden">Load more</button>
     <script type="module" src="./index.js"></script>
   </body>
 </html>
