--- a/src/index.html
+++ b/src/index.html
@@ -16,6 +16,7 @@
     <div class="gallery">
       <!-- Карточки изображений -->
     </div>
+    <div class="end"></div>
        <button type="button" class="load-more loadMoreHidden">Load more</button>
     <script type="module" src="./index.js"></script>
   </body>
